src/LangParser.py
# Generated from Lang.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LangParser ( Parser ):

    grammarFileName = "Lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'->'", "':'", "'return'", "','", 
                     "'int'", "'float'", "'bool'", "'None'", "'break'", 
                     "'continue'", "'-'", "'+'", "'/'", "'*'", "'%'", "'//'", 
                     "'**'", "'>'", "'<'", "'<='", "'>='", "'=='", "'!='", 
                     "'and'", "'or'", "'not'", "'='", "'if'", "'elif'", 
                     "'else'", "'while'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "KWD", "COMMENT", "BOOL", "ID", "HID", 
                      "INT", "FLOAT", "SYM", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "NEWLINE", "WS", "LINE_ESCAPE", "INDENT", 
                      "DEDENT" ]

    RULE_prog = 0
    RULE_file = 1
    RULE_function = 2
    RULE_ret_smt = 3
    RULE_exp_block = 4
    RULE_exp = 5
    RULE_exp_stmt = 6
    RULE_stmt = 7
    RULE_list = 8
    RULE_type = 9
    RULE_ret_type = 10
    RULE_var = 11
    RULE_int = 12
    RULE_float = 13
    RULE_bool = 14
    RULE_break = 15
    RULE_continue = 16
    RULE_a_op = 17
    RULE_aop3 = 18
    RULE_aop2 = 19
    RULE_aop1 = 20
    RULE_b_op = 21
    RULE_func_call = 22
    RULE_arg = 23
    RULE_args = 24
    RULE_param = 25
    RULE_params = 26
    RULE_list_var = 27
    RULE_aop_var = 28
    RULE_int_var = 29
    RULE_float_var = 30
    RULE_bool_var = 31
    RULE_var_decl = 32
    RULE_if_param = 33
    RULE_if = 34
    RULE_elif = 35
    RULE_else = 36
    RULE_if_statement = 37
    RULE_while_statement = 38
    RULE_newl_ignore = 39

    ruleNames =  [ "prog", "file", "function", "ret_smt", "exp_block", "exp", 
                   "exp_stmt", "stmt", "list", "type", "ret_type", "var", 
                   "int", "float", "bool", "break", "continue", "a_op", 
                   "aop3", "aop2", "aop1", "b_op", "func_call", "arg", "args", 
                   "param", "params", "list_var", "aop_var", "int_var", 
                   "float_var", "bool_var", "var_decl", "if_param", "if", 
                   "elif", "else", "if_statement", "while_statement", "newl_ignore" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    KWD=33
    COMMENT=34
    BOOL=35
    ID=36
    HID=37
    INT=38
    FLOAT=39
    SYM=40
    LPAREN=41
    RPAREN=42
    LBRACK=43
    RBRACK=44
    NEWLINE=45
    WS=46
    LINE_ESCAPE=47
    INDENT=48
    DEDENT=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newl_ignore(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.Newl_ignoreContext)
            else:
                return self.getTypedRuleContext(LangParser.Newl_ignoreContext,i)


        def file_(self):
            return self.getTypedRuleContext(LangParser.FileContext,0)


        def EOF(self):
            return self.getToken(LangParser.EOF, 0)

        def getRuleIndex(self):
            return LangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = LangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.newl_ignore()
            self.state = 81
            self.file_()
            self.state = 82
            self.newl_ignore()
            self.state = 83
            self.match(LangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExpContext)
            else:
                return self.getTypedRuleContext(LangParser.ExpContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.FunctionContext)
            else:
                return self.getTypedRuleContext(LangParser.FunctionContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile" ):
                return visitor.visitFile(self)
            else:
                return visitor.visitChildren(self)




    def file_(self):

        localctx = LangParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 932678991890) != 0):
                self.state = 87
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 27, 29, 32, 35, 36, 38, 39]:
                    self.state = 85
                    self.exp()
                    pass
                elif token in [1]:
                    self.state = 86
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(LangParser.VarContext,0)


        def args(self):
            return self.getTypedRuleContext(LangParser.ArgsContext,0)


        def ret_type(self):
            return self.getTypedRuleContext(LangParser.Ret_typeContext,0)


        def exp_block(self):
            return self.getTypedRuleContext(LangParser.Exp_blockContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = LangParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(LangParser.T__0)
            self.state = 93
            self.var()
            self.state = 94
            self.args()
            self.state = 95
            self.match(LangParser.T__1)
            self.state = 96
            self.ret_type()
            self.state = 97
            self.match(LangParser.T__2)
            self.state = 98
            self.exp_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ret_smtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_call(self):
            return self.getTypedRuleContext(LangParser.Func_callContext,0)


        def a_op(self):
            return self.getTypedRuleContext(LangParser.A_opContext,0)


        def b_op(self):
            return self.getTypedRuleContext(LangParser.B_opContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_ret_smt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet_smt" ):
                listener.enterRet_smt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet_smt" ):
                listener.exitRet_smt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRet_smt" ):
                return visitor.visitRet_smt(self)
            else:
                return visitor.visitChildren(self)




    def ret_smt(self):

        localctx = LangParser.Ret_smtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ret_smt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(LangParser.T__3)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 101
                self.func_call()
                pass

            elif la_ == 2:
                self.state = 102
                self.a_op(0)
                pass

            elif la_ == 3:
                self.state = 103
                self.b_op(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(LangParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(LangParser.DEDENT, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExpContext)
            else:
                return self.getTypedRuleContext(LangParser.ExpContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_exp_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_block" ):
                listener.enterExp_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_block" ):
                listener.exitExp_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_block" ):
                return visitor.visitExp_block(self)
            else:
                return visitor.visitChildren(self)




    def exp_block(self):

        localctx = LangParser.Exp_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exp_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(LangParser.INDENT)
            self.state = 108 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 107
                self.exp()
                self.state = 110 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 932678991888) != 0)):
                    break

            self.state = 112
            self.match(LangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_stmt(self):
            return self.getTypedRuleContext(LangParser.Exp_stmtContext,0)


        def stmt(self):
            return self.getTypedRuleContext(LangParser.StmtContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(LangParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(LangParser.While_statementContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = LangParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_exp)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.exp_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.while_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(LangParser.StmtContext,0)


        def NEWLINE(self):
            return self.getToken(LangParser.NEWLINE, 0)

        def getRuleIndex(self):
            return LangParser.RULE_exp_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_stmt" ):
                listener.enterExp_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_stmt" ):
                listener.exitExp_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_stmt" ):
                return visitor.visitExp_stmt(self)
            else:
                return visitor.visitChildren(self)




    def exp_stmt(self):

        localctx = LangParser.Exp_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_exp_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.stmt()
            self.state = 121
            self.match(LangParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_call(self):
            return self.getTypedRuleContext(LangParser.Func_callContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(LangParser.Var_declContext,0)


        def a_op(self):
            return self.getTypedRuleContext(LangParser.A_opContext,0)


        def b_op(self):
            return self.getTypedRuleContext(LangParser.B_opContext,0)


        def ret_smt(self):
            return self.getTypedRuleContext(LangParser.Ret_smtContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = LangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.func_call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.var_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.a_op(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.b_op(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.ret_smt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(LangParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(LangParser.RBRACK, 0)

        def a_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.A_opContext)
            else:
                return self.getTypedRuleContext(LangParser.A_opContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = LangParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(LangParser.LBRACK)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 893353197568) != 0):
                self.state = 131
                self.a_op(0)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 132
                    self.match(LangParser.T__4)
                    self.state = 133
                    self.a_op(0)
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 141
            self.match(LangParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = LangParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ret_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LangParser.TypeContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_ret_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet_type" ):
                listener.enterRet_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet_type" ):
                listener.exitRet_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRet_type" ):
                return visitor.visitRet_type(self)
            else:
                return visitor.visitChildren(self)




    def ret_type(self):

        localctx = LangParser.Ret_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ret_type)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.type_()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(LangParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LangParser.ID, 0)

        def getRuleIndex(self):
            return LangParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = LangParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(LangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(LangParser.INT, 0)

        def getRuleIndex(self):
            return LangParser.RULE_int

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)




    def int_(self):

        localctx = LangParser.IntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_int)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(LangParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(LangParser.FLOAT, 0)

        def getRuleIndex(self):
            return LangParser.RULE_float

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat" ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat" ):
                listener.exitFloat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat" ):
                return visitor.visitFloat(self)
            else:
                return visitor.visitChildren(self)




    def float_(self):

        localctx = LangParser.FloatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(LangParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(LangParser.BOOL, 0)

        def getRuleIndex(self):
            return LangParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)




    def bool_(self):

        localctx = LangParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_bool)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(LangParser.BOOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_break

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak" ):
                listener.enterBreak(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak" ):
                listener.exitBreak(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak" ):
                return visitor.visitBreak(self)
            else:
                return visitor.visitChildren(self)




    def break_(self):

        localctx = LangParser.BreakContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_break)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(LangParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinueContext(ParserRuleContext):
        __slots__ = 'parser'
